--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1870,11 +1870,21 @@ input, select, textarea {
 		ol li {
 			padding-left: 0.25em;
 		}
+	
+	nl {
+		list-style: none;
+		margin: -1em 0 1em 0;
+		padding-left: 2em;
+	}
+
+		nl li {
+			padding-left: 0.5em;
+		}
 
 	ul {
 		list-style: disc;
-		margin: 0 0 2em 0;
-		padding-left: 1em;
+		margin: 0 0 1em 0;
+		padding-left: 2em;
 	}
 
 		ul li {
@@ -2577,7 +2587,7 @@ input, select, textarea {
 			-ms-transition: -ms-transform 0.5s ease, opacity 0.5s ease;
 			transition: transform 0.5s ease, opacity 0.5s ease;
 			position: relative;
-			width: calc(33.33333% - 2.5em);
+			width: calc(33.333333% - 2.5em);
 			margin: 2.5em 0 0 2.5em;
 		}
 
@@ -3146,7 +3156,7 @@ input, select, textarea {
 /* Main */
 
 	#main {
-		padding: 0em 0 6em 0 ;
+		padding: 0em 0 3em 0 ;
 	}
 
 		@media screen and (max-width: 736px) {
